Trying to layout the detail view

--- a/Rotten Tomatoes/MovieDetailViewController.xib
+++ b/Rotten Tomatoes/MovieDetailViewController.xib
@@ -7,6 +7,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MovieDetailViewController">
             <connections>
                 <outlet property="movieDetail" destination="plJ-ie-zI5" id="obJ-is-sEp"/>
+                <outlet property="movieDetailScrollView" destination="zn7-JM-nq3" id="Otw-Iw-fMU"/>
                 <outlet property="moviePoster" destination="NUa-EZ-bcF" id="Vf2-zI-trx"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -16,17 +17,19 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" id="zn7-JM-nq3">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="1000"/>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="top" bounces="NO" id="zn7-JM-nq3">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="NUa-EZ-bcF">
-                            <rect key="frame" x="7" y="72" width="307" height="215"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <rect key="frame" x="31" y="73" width="258" height="261"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" red="1" green="0.31343869050000001" blue="0.35414358330000001" alpha="1" colorSpace="calibratedRGB"/>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="plJ-ie-zI5">
-                            <rect key="frame" x="8" y="295" width="304" height="500"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a super long text and stll going on and on and ong ona odonaona aonoaiejro aoiomr oeaoimo a omeorim " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="plJ-ie-zI5">
+                            <rect key="frame" x="11" y="342" width="299" height="100"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" red="0.41135708830000001" green="1" blue="0.94691309960000003" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
