Playing with some colors

--- a/Rotten Tomatoes/MovieCell.xib
+++ b/Rotten Tomatoes/MovieCell.xib
@@ -28,11 +28,12 @@
                         <rect key="frame" x="110" y="50" width="202" height="87"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.5931778724747474" green="0.5931778724747474" blue="0.5931778724747474" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </tableViewCellContentView>
+            <color key="backgroundColor" red="1" green="0.95594983967750513" blue="0.72079889649174911" alpha="0.66000000000000003" colorSpace="calibratedRGB"/>
             <connections>
                 <outlet property="movieImage" destination="6vB-2K-WTj" id="Lhb-Rd-Bgs"/>
                 <outlet property="snippetLabel" destination="o3i-dg-okw" id="RPg-t3-tnj"/>
