--- a/Rotten Tomatoes/MovieDetailViewController.xib
+++ b/Rotten Tomatoes/MovieDetailViewController.xib
@@ -40,7 +40,7 @@
                             </subviews>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="1" green="0.634814990800743" blue="0.18318690843617336" alpha="1" colorSpace="calibratedRGB"/>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
